Mudanças de Layout, Menu Traybar, Adicoes de mais documentos. Entre outras features.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /AppBarMenu/AppBarMenu/obj/Debug
 /AppBarMenu/AppBarMenu/AppBarMenu.csproj.user
 /AppBarMenu/.vs/AppBarMenu/v16/.suo
+/AppBarMenu/AppBarMenu/bin/x64/Release
+/AppBarMenu/AppBarMenu/obj/Release
+/AppBarMenu/AppBarMenu/obj/x64
+/AppBarMenu/AppBarMenu/obj/x86/Release/TempPE
+/AppBarMenu/AppBarMenu/obj/x86/Release
