Correcoes de funcionalides, context menu windows -- uso da class FileSystemWatch nao sei como resolver

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /AppBarMenu/InsertItem/obj/Release/netcoreapp3.1
 /AppBarMenu/InsertItem/obj
 /AppBarMenu/AppBarMenu/bin/Release
+/AppBarMenu/Testador
